# CStyleInterpreter

./: .gitignore  CMakeLists.txt  ConsoleApplication1.slnx  MathLang_Documentation.md  test_advanced.mlang  test_all_features.mlang
ConsoleApplication1/: CStyleInterpreter.cpp  CStyleInterpreter.h  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  InterpreterCommands.cpp  MathFunctions.cpp  MathParser.cpp  StringFunctions.cpp  VariableOperations.cpp  main.cpp
ConsoleApplication1/my_scripts/: math_core.mlang  string_processor.mlang  test.mlang
ConsoleApplication1/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  vc145.idb
ConsoleApplication1/x64/Debug/ConsoleA.291e2edc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ConsoleApplication1/x64/Release/: ConsoleApplication1.exe.recipe
tests/: test_core.cpp  test_helpers.h  test_interpreter_commands.cpp  test_math_functions.cpp  test_math_parser.cpp  test_string_functions.cpp  test_variable_operations.cpp
